# StockTradingAgent

stock-trading-agent/: Dockerfile  README.md  docker-compose.yml  dvc.yaml  mlruns  pyproject.toml
stock-trading-agent/airflow/: docker-compose.yml  requirements.txt
stock-trading-agent/airflow/dags/: dag_inference.py  dag_real_time_ingestion.py  dag_training.py
stock-trading-agent/data/raw/: all_tickers_data.parquet
stock-trading-agent/kubernetes/: deployment.yaml  service.yaml
stock-trading-agent/notebooks/: Untitled.ipynb  Untitled1.ipynb  backtesting.ipynb
stock-trading-agent/scripts/: deploy_model.py  monitor_model.py  run_inference.py  run_training.py  sync_dvc_s3.py
stock-trading-agent/src/stock_trading_agent/: __init__.py  config.py  constants.py  logger.py
stock-trading-agent/src/stock_trading_agent/api/: inference_service.py  main.py  routes.py  schemas.py
stock-trading-agent/src/stock_trading_agent/data_ingestion/: fetch_all_data.py  historical_data.py  preprocess.py  real_time_stream.py
stock-trading-agent/src/stock_trading_agent/data_tracking/: sync_data.py
stock-trading-agent/src/stock_trading_agent/enums/: ticker.py
stock-trading-agent/src/stock_trading_agent/feature_engineering/: features.py  fundamental_features.py  ta_features.py
stock-trading-agent/src/stock_trading_agent/mlflow_tracking/: mlflow_utils.py  register_model.py
stock-trading-agent/src/stock_trading_agent/models/: evaluate.py  generative_ai.py  (+3 more)
stock-trading-agent/tests/: test_api.py  test_data_ingestion.py  test_features.py  test_inference.py  test_models.py
(+6 files in other folders)
